<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rock"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/rock_option_description"
        android:onClick="PlayGame"
        android:tag="@string/rock_image_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock_button" />

    <ImageView
        android:id="@+id/scissors"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scissors_option_description"
        android:onClick="PlayGame"
        android:tag="@string/scissors_image_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paper"
        app:srcCompat="@drawable/scissor_button" />

    <ImageView
        android:id="@+id/paper"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/paper_option_description"
        android:onClick="PlayGame"
        android:tag="@string/paper_image_tag"
        app:layout_constraintEnd_toStartOf="@+id/scissors"
        app:layout_constraintStart_toEndOf="@+id/rock"
        app:layout_constraintTop_toTopOf="@+id/rock"
        app:srcCompat="@drawable/paper_button" />

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/player_selection_description"
        app:layout_constraintEnd_toStartOf="@+id/computer_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/computer_image"
        app:srcCompat="@drawable/none" />

    <ImageView
        android:id="@+id/computer_image"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/computer_selection_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scissors"
        app:srcCompat="@drawable/none" />

    <TextView
        android:id="@+id/player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_move_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_image" />

    <TextView
        android:id="@+id/computer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/computer_move_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_image" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/result_initial_text"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>